<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="azimuth">Azimuth</string>
    <string name="light">Light</string>
    <string name="pressure">Pressure</string>
    <string name="pick_sensor"><u>Pick a Sensor:</u></string>
    <string name="enter_phrase">Please Enter Any Phrase</string>
    <string name="phrase_hint">Write something</string>
    <string name="create_code">Create QR</string>
    <string name="linear_acc"><u>Linear Accelerometer Results:</u></string>
    <string name="X">X :</string>
    <string name="Y">Y :</string>
    <string name="Z">Z :</string>
    <string name="ms2">m/s^2</string>
    <string name="done">Done</string>

</resources>